added recipe page and footer

--- a/bread.html
+++ b/bread.html
@@ -50,7 +50,7 @@
                 <div class="breads-grid">
                     <div class="breads-space">
                         <div class="breads-border">
-                            <a href="BnoKneadOneRec.html" target="_blank">
+                            <a href="brNoKnead.html" target="_blank">
                                 <img class="testingImage" src="./ImagesFinal/NKneadBreadSTh.png" alt="No Knead Bread Image and Recipe Link">
                                 <p class="recipe-name">No-Knead Bread</p>
                             </a>
