--- a/brNoKnead.html
+++ b/brNoKnead.html
@@ -76,21 +76,27 @@
                 </div>
                 <div class="rec-enter-email">
                     <form action="/action_page.php">
-                        <label for="email">Receive Recipes & Special Offers</label>
+                        <label for="email">Enter Email to Receive Recipes & Special Offers</label><br>
                         <input type="email" id="email" name="email">
                         <input type="Submit">
                     </form> 
                 </div>
                 <div class="rec-social">
-                    <a href="index.html" target="_blank">
-                        <img class="sm-icon" src="./ImagesFinal/fbIcon.png" alt="Facebook icon link">
-                    </a>
-                    <a href="index.html" target="_blank">
-                        <img class="sm-icon" src="./ImagesFinal/inIcon.png" alt="Instagram icon link">
-                    </a>
-                    <a href="index.html" target="_blank">
-                        <img class="sm-icon" src="./ImagesFinal/piIcon.png" alt="Pinterest icon link">
-                    </a>
+                    <div class="sm-icon-box">
+                        <a href="index.html" target="_blank">
+                            <img class="sm-icon" src="./ImagesFinal/fbIcon.png" alt="Facebook icon link">
+                        </a>
+                    </div>
+                    <div class="sm-icon-box">
+                        <a href="index.html" target="_blank">
+                            <img class="sm-icon" src="./ImagesFinal/inIcon.png" alt="Instagram icon link">
+                        </a>
+                    </div>
+                    <div class="sm-icon-box">
+                        <a href="index.html" target="_blank">
+                            <img class="sm-icon" src="./ImagesFinal/piIcon.png" alt="Pinterest icon link">
+                        </a>
+                    </div>
                 </div>
             </div>
             <!--<div class="rec-footer-padding">
