--- a/brNoKnead.html
+++ b/brNoKnead.html
@@ -12,7 +12,7 @@
         <div class="categories-padding" id="categories-padding-top"></div>
         <div class="categories-nav-bar">
             <a href="index.html" target="_blank" id="mnb" >HOME</a>
-            <a href="bread.html" class="active" id="mnb" >BREADS</a>
+            <a href="bread.html" class="active" target="_blank" id="mnb" >BREADS</a>
             <a href="cake.html" target="_blank" id="mnb" >CAKES</a>
             <a href="toppings.html" target="_blank" id="mnb">TOPPINGS</a>
             <a href="about.html" target="_blank"  id="mnb">ABOUT</a>  
@@ -20,7 +20,7 @@
         <div class="categories-header">
             <div class="categories-header-words">
                 <h2>No-Knead Sandwich Bread</h2>
-                <h3>ADAPTED FROM A RECIPE BY PJ HAMEL</h3>
+                <h3 class="rec-rec-by">ADAPTED FROM A RECIPE BY PJ HAMEL</h3>
                 <!--<div class="c-header-words">Bread Recipes</div>-->
             </div>
             <div class="categories-header-image">
@@ -70,17 +70,10 @@
 
     <footer>
         <div>
-            <div class="rec-flexbox-container">
-                <div class="rec-connect">
-                    Connect with us
-                </div>
-                <div class="rec-enter-email">
-                    <form action="/action_page.php">
-                        <label for="email">Enter Email to Receive Recipes & Special Offers</label><br>
-                        <input type="email" id="email" name="email">
-                        <input type="Submit">
-                    </form> 
-                </div>
+            <div class="rec-connect">
+                Connect with us
+            </div>
+            <!--<div class="rec-flexbox-container">
                 <div class="rec-social">
                     <div class="sm-icon-box">
                         <a href="index.html" target="_blank">
@@ -98,6 +91,31 @@
                         </a>
                     </div>
                 </div>
+                <div class="rec-enter-email">
+                    <form action="/action_page.php">
+                        <label for="email">Enter Email to Receive Recipes & Special Offers</label><br>
+                        <input type="email" id="email" name="email">
+                        <input type="Submit">
+                    </form> 
+                </div>
+            </div>-->
+            <div class="footer-enter-email">
+                <form action="/action_page.php">
+                    <label for="email">Enter Email to Receive Recipes & Special Offers</label><br>
+                    <input type="email" id="email" name="email">
+                    <input type="Submit">
+                </form> 
+            </div>
+            <div class="footer-img-test">
+                <a href="index.html" target="_blank">
+                    <img class="footer-icon" src="./ImagesFinal/fbIcon.png" alt="Facebook icon link">
+                </a>
+                <a href="index.html" target="_blank">
+                    <img class="footer-icon" src="./ImagesFinal/inIcon2.png" alt="Instagram icon link">
+                </a>
+                <a href="index.html" target="_blank">
+                    <img class="footer-icon" src="./ImagesFinal/piIcon.png" alt="Pinterest icon link">
+                </a>
             </div>
             <!--<div class="rec-footer-padding">
 
