added recipe pages

--- a/brNoKnead.html
+++ b/brNoKnead.html
@@ -24,7 +24,7 @@
                 <!--<div class="c-header-words">Bread Recipes</div>-->
             </div>
             <div class="categories-header-image">
-                <img src="./ImagesFinal/NKneadBreadSFi.png" alt="bread">
+                <img src="./ImagesFinal/NKneadBreadSFi.png" alt="No-Knead bread image">
             </div>
 
         </div>
@@ -62,7 +62,7 @@
             <p class="rec-adapted-padding"><br>Yield: 1 loaf<br><br><strong>Recipe adapted from No-Knead 100% Whole Wheat Bread by PJ Hamel and King Arthur Baking Company</strong>
             </p>
             <p class="rec-link-padding">
-                Origianl recipe link: <a href="https://www.kingarthurbaking.com/recipes/no-knead-100-whole-wheat-bread-recipe" class="recipe-link">https://www.kingarthurbaking.com/recipes/no-knead-100-whole-wheat-bread-recipe</a>
+                Origianl recipe link: <a href="https://www.kingarthurbaking.com/recipes/no-knead-100-whole-wheat-bread-recipe" class="recipe-link" target="_blank">https://www.kingarthurbaking.com/recipes/no-knead-100-whole-wheat-bread-recipe</a>
             </p>
         </div>
     </div>
@@ -108,13 +108,13 @@
             </div>
             <div class="footer-img-test">
                 <a href="index.html" target="_blank">
-                    <img class="footer-icon" src="./ImagesFinal/fbIcon.png" alt="Facebook icon link">
+                    <img class="footer-icon" src="./ImagesFinal/fbIcon.png" alt="Facebook icon link" loading="lazy">
                 </a>
                 <a href="index.html" target="_blank">
-                    <img class="footer-icon" src="./ImagesFinal/inIcon2.png" alt="Instagram icon link">
+                    <img class="footer-icon" src="./ImagesFinal/inIcon2.png" alt="Instagram icon link" loading="lazy">
                 </a>
                 <a href="index.html" target="_blank">
-                    <img class="footer-icon" src="./ImagesFinal/piIcon.png" alt="Pinterest icon link">
+                    <img class="footer-icon" src="./ImagesFinal/piIcon.png" alt="Pinterest icon link" loading="lazy">
                 </a>
             </div>
             <!--<div class="rec-footer-padding">
