--- a/cake.html
+++ b/cake.html
@@ -30,16 +30,16 @@
                 <div class="breads-grid">
                     <div class="breads-space">
                         <div class="breads-border">
-                            <a href="BnoKneadOneRec.html" target="_blank">
-                                <img class="testingImage" src="./ImagesFinal/CakeChocolateOn.png" alt="No Knead Bread Image and Recipe Link">
+                            <a href="cChocCake.html" target="_blank">
+                                <img class="testingImage" src="./ImagesFinal/CakeChocolateOn.png" alt="Chocolate cake image">
                                 <p class="recipe-name">Chocolate Cake</p>
                             </a>
                         </div>
                     </div>
                     <div class="breads-space">
                         <div class="breads-border">
-                            <a href="BnoKneadOneRec.html" target="_blank">
-                                <img class="testingImage" src="./ImagesFinal/CakeCarrotOn.png" alt="No Knead Bread Image and Recipe Link">
+                            <a href="cCarrotCake.html" target="_blank">
+                                <img class="testingImage" src="./ImagesFinal/CakeCarrotOn.png" alt="Carrot Cake image">
                                 <p class="recipe-name">Carrot Cake</p>
                             </a>
                         </div>
@@ -48,7 +48,7 @@
                         <div class="breads-border">
                             <a href="BnoKneadOneRec.html" target="_blank">
                                 <img class="testingImage" src="./ImagesFinal/NKneadBreadSTh.png" alt="No Knead Bread Image and Recipe Link" loading="lazy">
-                                <p class="recipe-name">Parmesan Garlic Breadsticks</p>
+                                <p class="recipe-name">German Chocolate Cake</p>
                             </a>
                         </div>
                     </div>
@@ -136,15 +136,26 @@
     </main>
     
     <footer>
-        <div class="footer">
-            <div class="enter-email">
-                <form action="/action_page.php">
-                    <label for="email">Enter your email:</label>
-                    <input type="email" id="email" name="email">
-                    <input type="submit">
-                </form> 
-            </div>
-            <p>Placeholder for footer</p>
+        <div class="rec-connect">
+            Connect with us
+        </div>
+        <div class="footer-enter-email">
+            <form action="/action_page.php">
+                <label for="email">Enter Email to Receive Recipes & Special Offers</label><br>
+                <input type="email" id="email" name="email">
+                <input type="Submit">
+            </form> 
+        </div>
+        <div class="footer-img-test">
+            <a href="index.html" target="_blank">
+                <img class="footer-icon" src="./ImagesFinal/fbIcon.png" alt="Facebook icon link" loading="lazy">
+            </a>
+            <a href="index.html" target="_blank">
+                <img class="footer-icon" src="./ImagesFinal/inIcon2.png" alt="Instagram icon link" loading="lazy">
+            </a>
+            <a href="index.html" target="_blank">
+                <img class="footer-icon" src="./ImagesFinal/piIcon.png" alt="Pinterest icon link" loading="lazy">
+            </a>
         </div>
     </footer>
 
