--- a/index.html
+++ b/index.html
@@ -51,15 +51,26 @@
         </div>
     </main>
     <footer>
-        <div class="footer">
-            <div class="enter-email">
-                <form action="/action_page.php">
-                    <label for="email">Enter your email:</label>
-                    <input type="email" id="email" name="email">
-                    <input type="submit">
-                </form> 
-            </div>
-            <p>Placeholder for footer</p>
+        <div class="rec-connect">
+            Connect with us
+        </div>
+        <div class="footer-enter-email">
+            <form action="/action_page.php">
+                <label for="email">Enter Email to Receive Recipes & Special Offers</label><br>
+                <input type="email" id="email" name="email">
+                <input type="Submit">
+            </form> 
+        </div>
+        <div class="footer-img-test">
+            <a href="index.html" target="_blank">
+                <img class="footer-icon" src="./ImagesFinal/fbIcon.png" alt="Facebook icon link" loading="lazy">
+            </a>
+            <a href="index.html" target="_blank">
+                <img class="footer-icon" src="./ImagesFinal/inIcon2.png" alt="Instagram icon link" loading="lazy">
+            </a>
+            <a href="index.html" target="_blank">
+                <img class="footer-icon" src="./ImagesFinal/piIcon.png" alt="Pinterest icon link" loading="lazy">
+            </a>
         </div>
     </footer>
 </body>
