added recipe pages

--- a/brNoKnead.html
+++ b/brNoKnead.html
@@ -32,8 +32,8 @@
     <main>
         <div class="recipe">
             <div class="rec-nav-bar">
-                <a href="index.html">Home ></a>
-                <a href="bread.html">Breads</a>
+                <a href="index.html" target="_blank">Home ></a>
+                <a href="bread.html" target="_blank">Breads</a>
             </div>
             <!--<h2>No-Knead Sandwich Bread</h2>
             <h3>ADAPTED FROM A RECIPE BY PJ HAMEL</h3>-->
