--- a/cCarrotCake.html
+++ b/cCarrotCake.html
@@ -30,8 +30,8 @@
     <main>
         <div class="recipe">
             <div class="rec-nav-bar">
-                <a href="index.html">Home ></a>
-                <a href="cake.html">Cakes</a>
+                <a href="index.html" target="_blank">Home ></a>
+                <a href="cake.html" target="_blank">Cakes</a>
             </div>
             <p>
                 <ul><strong>Ingredients</strong><br><br><strong>Cake</strong>
