--- a/tCinnamonSugar.html
+++ b/tCinnamonSugar.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quick Buttercream Frosting</title>
+    <title>Cinnamon Sugar Recipe</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -19,8 +19,8 @@
         </div>
         <div class="categories-header">
             <div class="categories-header-words">
-                <h2>Quick Buttercream Frosting</h2>
-                <h3 class="rec-rec-by">RECIPE BY KING ARTHUR TEST KITCHEN<br>from King Arthur Baking Company</h3>
+                <h2>Cinnamon Sugar</h2>
+                <h3 class="rec-rec-by">RECIPE BY PJ HAMEL<br>from King Arthur Baking Company</h3>
             </div>
             <div class="categories-header-image">
                 <img src="./ImagesFinal/RSourdoughTw.png" alt="Sourdough bread image">
@@ -35,28 +35,17 @@
             </div>
             <p>
                 <ul><strong>Ingredients</strong>
-                    <li>8 tablespoons (113g) unsalted butter or 1/2 cup (92g) vegetable shortening, or a combination, softened</li>
-                    <li>pinch of salt</li>
-                    <li>1 teaspoon King Arthur Pure Vanilla Extract</li>
-                    <li>2 1/2 to 3 cups (283g to 340g) confectioners' sugar</li>
-                    <li>2 to 4 tablespoons (28g to 57g) milk</li>
-                    <li>1 tablespoon (14g) meringue powder, optional, for "holding power"</li>
+                    <li>3 tablespoons (37g) granulated sugar</li>
+                    <li>1 teaspoon cinnamon</li>
                 </ul>
                 <ol><strong>Instructions</strong>
-                    <li>Beat the butter and/or shortening until fluffy.</li>
-                    <li>Beat in the salt, meringue powder, and vanilla.</li>
-                    <li>Add the confectioners' or glazing sugar and 2 tablespoons of the milk, and beat until smooth. Scrape the sides and bottom of the bowl.</li>
-                    <li>Adjust the consistency of the frosting as needed by adding more confectioners' sugar or milk.</li>
-                    <li>If you're not going to use the frosting right away, keep it at room temperature, covered, to prevent it from developing a dry crust.</li>
-                </ol>        
-                <ul><strong>Tips from our Bakers</strong>
-                    <li>This recipe is sufficient to frost the top of a 9" x 13" cake, or about 15 to 18 cupcakes. If you're frosting a layer cake, double the recipe in order to have enough frosting to pipe decorations.</li>
-                </ul>                
+                    <li>Mix the sugar and cinnamon together.</li>
+                </ol>             
             </p>
             <p class="rec-adapted-padding"><br>Yield: 2 1/2 cups<br><br><strong>Recipe from King Arthur Baking Company</strong>
             </p>
             <p class="rec-link-padding">
-                Original Recipe Link: <a href="https://www.kingarthurbaking.com/recipes/quick-buttercream-frosting-recipe" class="recipe-link" target="_blank">https://www.kingarthurbaking.com/recipes/quick-buttercream-frosting-recipe</a>
+                Original Recipe Link: <a href="https://www.kingarthurbaking.com/recipes/doughnut-muffins-recipe" class="recipe-link" target="_blank">https://www.kingarthurbaking.com/recipes/doughnut-muffins-recipe</a>
             </p>
         </div>
     </div>
