--- a/brSourdough.html
+++ b/brSourdough.html
@@ -30,8 +30,8 @@
     <main>
         <div class="recipe">
             <div class="rec-nav-bar">
-                <a href="index.html">Home ></a>
-                <a href="bread.html">Breads</a>
+                <a href="index.html" target="_blank">Home ></a>
+                <a href="bread.html" target="_blank">Breads</a>
             </div>
             <p>
                 <ul><strong>Ingredients</strong>
