--- a/tChocolateButtercream.html
+++ b/tChocolateButtercream.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quick Buttercream Frosting</title>
+    <title>Chocolate Buttercream Frosting</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -19,8 +19,8 @@
         </div>
         <div class="categories-header">
             <div class="categories-header-words">
-                <h2>Quick Buttercream Frosting</h2>
-                <h3 class="rec-rec-by">RECIPE BY KING ARTHUR TEST KITCHEN<br>from King Arthur Baking Company</h3>
+                <h2>Chocolate Buttercream Frosting</h2>
+                <h3 class="rec-rec-by">RECIPE BY CHARLOTTE RUTLEDGE<br>from King Arthur Baking Company</h3>
             </div>
             <div class="categories-header-image">
                 <img src="./ImagesFinal/RSourdoughTw.png" alt="Sourdough bread image">
@@ -35,28 +35,27 @@
             </div>
             <p>
                 <ul><strong>Ingredients</strong>
-                    <li>8 tablespoons (113g) unsalted butter or 1/2 cup (92g) vegetable shortening, or a combination, softened</li>
-                    <li>pinch of salt</li>
-                    <li>1 teaspoon King Arthur Pure Vanilla Extract</li>
-                    <li>2 1/2 to 3 cups (283g to 340g) confectioners' sugar</li>
-                    <li>2 to 4 tablespoons (28g to 57g) milk</li>
-                    <li>1 tablespoon (14g) meringue powder, optional, for "holding power"</li>
+                    <li>1 1/4 cups (106g) natural cocoa powder*</li>
+                    <li>4 cups (454g) confectioners' sugar, divided</li>
+                    <li>1/4 teaspoon salt</li>
+                    <li>1/3 cup (74g) water, hot</li>
+                    <li>1 tablespoon (14g) King Arthur Pure Vanilla Extract</li>
+                    <li>20 tablespoons (284g) butter, softened</li>
+                    <li class="list-no">*Substitute Dutch-process cocoa if you like; the frosting will have a more robust, bittersweet chocolate flavor.</li>
                 </ul>
                 <ol><strong>Instructions</strong>
-                    <li>Beat the butter and/or shortening until fluffy.</li>
-                    <li>Beat in the salt, meringue powder, and vanilla.</li>
-                    <li>Add the confectioners' or glazing sugar and 2 tablespoons of the milk, and beat until smooth. Scrape the sides and bottom of the bowl.</li>
-                    <li>Adjust the consistency of the frosting as needed by adding more confectioners' sugar or milk.</li>
-                    <li>If you're not going to use the frosting right away, keep it at room temperature, covered, to prevent it from developing a dry crust.</li>
+                    <li>In a large mixing bowl or the bowl of your stand mixer, stir together — by hand or mixer — the cocoa powder, 1 cup (113g) of the confectioners' sugar, and the salt. Stir in the water and vanilla, scraping the bowl if necessary.</li>
+                    <li>Add the butter and remaining confectioners' sugar, stirring to combine. Using an electric hand mixer or a stand mixer with paddle attachment, beat the frosting at medium-high speed for 1 to 2 minutes, until lightened in color and fluffy, stopping halfway through to scrape the bottom and sides of the bowl. When the frosting is ready, scoop out a bit on your spatula; does it seem nicely spreadable? If it's too stiff, beat in water (1 teaspoon at a time) until it's the consistency you want.</li>
                 </ol>        
                 <ul><strong>Tips from our Bakers</strong>
-                    <li>This recipe is sufficient to frost the top of a 9" x 13" cake, or about 15 to 18 cupcakes. If you're frosting a layer cake, double the recipe in order to have enough frosting to pipe decorations.</li>
+                    <li>Make ahead tips: Cake layers and frosting can be made up to three days ahead, refrigerated, and the cake assembled the day you wish to serve it. For storing, wrap the layers in plastic and transfer the frosting to an airtight container, or tightly cover the bowl in which you made it. When you're ready to assemble the cake, remove the frosting from the fridge and warm at room temperature until soft enough to spread easily. The whole cake (assembled and decorated) can be stored in the freezer for up to a month.</li>
+                    <li>To make a 9" x 13" sheet cake: Prepare the batter as directed. Pour it into a lightly greased 9" x 13" pan, and bake in a preheated 325°F oven for about 45 to 48 minutes, until the cake tests done. You'll have excess frosting if you make the entire frosting recipe; if you don't want to end up with leftover frosting, consider making a half recipe (which will frost the cake minimally), or a three-quarter recipe (which will frost it more generously).</li>
                 </ul>                
             </p>
             <p class="rec-adapted-padding"><br>Yield: 2 1/2 cups<br><br><strong>Recipe from King Arthur Baking Company</strong>
             </p>
             <p class="rec-link-padding">
-                Original Recipe Link: <a href="https://www.kingarthurbaking.com/recipes/quick-buttercream-frosting-recipe" class="recipe-link" target="_blank">https://www.kingarthurbaking.com/recipes/quick-buttercream-frosting-recipe</a>
+                Original Recipe Link: <a href="https://www.kingarthurbaking.com/recipes/classic-birthday-cake-recipe" class="recipe-link" target="_blank">https://www.kingarthurbaking.com/recipes/classic-birthday-cake-recipe</a>
             </p>
         </div>
     </div>
