--- a/cake.html
+++ b/cake.html
@@ -57,8 +57,8 @@
                     <div class="breads-space">
                         <div class="breads-border">
                             <a href="BnoKneadOneRec.html" target="_blank">
-                                <img class="testingImage" src="./ImagesFinal/SourdoughBreadSTh.png" alt="No Knead Bread Image and Recipe Link">
-                                <p class="recipe-name">Rolls</p>
+                                <img class="testingImage" src="./ImagesFinal/GermanChocolateCake.png" alt="No Knead Bread Image and Recipe Link">
+                                <p class="recipe-name">German Chocolate Cake</p>
                             </a>
                         </div>
                     </div>
@@ -100,7 +100,7 @@
                         <div class="breads-border">
                             <a href="BnoKneadOneRec.html" target="_blank">
                                 <img class="testingImage" src="./ImagesFinal/pdMOn.png" alt="No Knead Bread Image and Recipe Link" loading="lazy">
-                                <p class="recipe-name">9</p>
+                                <p class="recipe-name">Raspberry Chocolate Cake</p>
                             </a>
                         </div>
                     </div>
@@ -109,8 +109,8 @@
                     <div class="breads-space">
                         <div class="breads-border">
                             <a href="BnoKneadOneRec.html" target="_blank">
-                                <img class="testingImage" src="./ImagesFinal/NKneadBreadSFi.png" alt="No Knead Bread Image and Recipe Link">
-                                <p class="recipe-name">10</p>
+                                <img class="testingImage" src="./ImagesFinal/RaspberryChocolateCake.png" alt="No Knead Bread Image and Recipe Link">
+                                <p class="recipe-name">Raspberry Chocolate Cake</p>
                             </a>
                         </div>
                     </div>
