--- a/toppings.html
+++ b/toppings.html
@@ -57,7 +57,7 @@
                     <div class="breads-space">
                         <div class="breads-border">
                             <a href="tStrawberryJam.html" target="_blank">
-                                <img class="testingImage" src="./ImagesFinal/SourdoughBreadSTh.png" alt="No Knead Bread Image and Recipe Link">
+                                <img class="testingImage" src="./ImagesFinal/mpJam.png" alt="No Knead Bread Image and Recipe Link">
                                 <p class="recipe-name">Strawberry Jam</p>
                             </a>
                         </div>
