--- a/bread.html
+++ b/bread.html
@@ -77,8 +77,34 @@
                     <div class="breads-space">
                         <div class="breads-border">
                             <a href="BnoKneadOneRec.html" target="_blank">
+                                <img class="testingImage" src="./ImagesFinal/NKneadBreadSFi.png" alt="No Knead Bread Image and Recipe Link">
+                                <p class="recipe-name">Crisy Cheese Pizza</p>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="breads-space">
+                        <div class="breads-border">
+                            <a href="BnoKneadOneRec.html" target="_blank">
+                                <img class="testingImage" src="./ImagesFinal/mpJam.png" alt="No Knead Bread Image and Recipe Link">
+                                <p class="recipe-name">Barbecue Chicken Pizza</p>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="breads-space">
+                        <div class="breads-border">
+                            <a href="BnoKneadOneRec.html" target="_blank">
+                                <img class="testingImage" src="./ImagesFinal/NKneadBreadSTh.png" alt="No Knead Bread Image and Recipe Link" loading="lazy">
+                                <p class="recipe-name">Pane Bianco</p>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="breads-grid">
+                    <div class="breads-space">
+                        <div class="breads-border">
+                            <a href="BnoKneadOneRec.html" target="_blank">
                                 <img class="testingImage" src="./ImagesFinal/Rolls.png" alt="No Knead Bread Image and Recipe Link">
-                                <p class="recipe-name">Rolls</p>
+                                <p class="recipe-name">Golden Pull Apart Rolls</p>
                             </a>
                         </div>
                     </div>
@@ -94,7 +120,7 @@
                         <div class="breads-border">
                             <a href="BnoKneadOneRec.html" target="_blank">
                                 <img class="testingImage" src="./ImagesFinal/NKneadBreadSTh.png" alt="No Knead Bread Image and Recipe Link" loading="lazy">
-                                <p class="recipe-name">Golden Pull Apart Rolls</p>
+                                <p class="recipe-name">Sandwich Bread</p>
                             </a>
                         </div>
                     </div>
@@ -112,7 +138,7 @@
                         <div class="breads-border">
                             <a href="BnoKneadOneRec.html" target="_blank">
                                 <img class="testingImage" src="./ImagesFinal/SourdoughBreadSTh.png" alt="No Knead Bread Image and Recipe Link">
-                                <p class="recipe-name">Doughnut Muffins</p>
+                                <p class="recipe-name">Strawberry Cream Cheese Rolls</p>
                             </a>
                         </div>
                     </div>
@@ -125,32 +151,6 @@
                         </div>
                     </div>
                 </div>
-                <div class="breads-grid">
-                    <div class="breads-space">
-                        <div class="breads-border">
-                            <a href="BnoKneadOneRec.html" target="_blank">
-                                <img class="testingImage" src="./ImagesFinal/NKneadBreadSFi.png" alt="No Knead Bread Image and Recipe Link">
-                                <p class="recipe-name">Sandwich Bread</p>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="breads-space">
-                        <div class="breads-border">
-                            <a href="BnoKneadOneRec.html" target="_blank">
-                                <img class="testingImage" src="./ImagesFinal/mpJam.png" alt="No Knead Bread Image and Recipe Link">
-                                <p class="recipe-name">Banana Bread</p>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="breads-space">
-                        <div class="breads-border">
-                            <a href="BnoKneadOneRec.html" target="_blank">
-                                <img class="testingImage" src="./ImagesFinal/NKneadBreadSTh.png" alt="No Knead Bread Image and Recipe Link" loading="lazy">
-                                <p class="recipe-name">12</p>
-                            </a>
-                        </div>
-                    </div>
-                </div>   
             </div>
         </div>
     </main>
