--- a/cake.html
+++ b/cake.html
@@ -48,7 +48,7 @@
                         <div class="breads-border">
                             <a href="BnoKneadOneRec.html" target="_blank">
                                 <img class="testingImage" src="./ImagesFinal/NKneadBreadSTh.png" alt="No Knead Bread Image and Recipe Link" loading="lazy">
-                                <p class="recipe-name">German Chocolate Cake</p>
+                                <p class="recipe-name">Lemon Bliss Cake</p>
                             </a>
                         </div>
                     </div>
@@ -66,7 +66,7 @@
                         <div class="breads-border">
                             <a href="BnoKneadOneRec.html" target="_blank">
                                 <img class="testingImage" src="./ImagesFinal/pdMTw.png" alt="No Knead Bread Image and Recipe Link">
-                                <p class="recipe-name">Rolls</p>
+                                <p class="recipe-name">Gluten-Free Almond Bundt Cake</p>
                             </a>
                         </div>
                     </div>
@@ -74,7 +74,7 @@
                         <div class="breads-border">
                             <a href="BnoKneadOneRec.html" target="_blank">
                                 <img class="testingImage" src="./ImagesFinal/NKneadBreadSTh.png" alt="No Knead Bread Image and Recipe Link" loading="lazy">
-                                <p class="recipe-name">6</p>
+                                <p class="recipe-name">Raspberry Tea Cake</p>
                             </a>
                         </div>
                     </div>
@@ -84,7 +84,7 @@
                         <div class="breads-border">
                             <a href="BnoKneadOneRec.html" target="_blank">
                                 <img class="testingImage" src="./ImagesFinal/pdMTw.png" alt="No Knead Bread Image and Recipe Link">
-                                <p class="recipe-name">Pumpkin Doughnuts</p>
+                                <p class="recipe-name">Chocolate Fudge Bundt Cake</p>
                             </a>
                         </div>
                     </div>
@@ -92,7 +92,7 @@
                         <div class="breads-border">
                             <a href="BnoKneadOneRec.html" target="_blank">
                                 <img class="testingImage" src="./ImagesFinal/SourdoughBreadSTh.png" alt="No Knead Bread Image and Recipe Link">
-                                <p class="recipe-name">8</p>
+                                <p class="recipe-name">Summer Spoon Cake</p>
                             </a>
                         </div>
                     </div>
@@ -100,7 +100,7 @@
                         <div class="breads-border">
                             <a href="BnoKneadOneRec.html" target="_blank">
                                 <img class="testingImage" src="./ImagesFinal/pdMOn.png" alt="No Knead Bread Image and Recipe Link" loading="lazy">
-                                <p class="recipe-name">Raspberry Chocolate Cake</p>
+                                <p class="recipe-name">Blueberry Breakfast Cake</p>
                             </a>
                         </div>
                     </div>
@@ -118,7 +118,7 @@
                         <div class="breads-border">
                             <a href="BnoKneadOneRec.html" target="_blank">
                                 <img class="testingImage" src="./ImagesFinal/mpJam.png" alt="No Knead Bread Image and Recipe Link">
-                                <p class="recipe-name">11</p>
+                                <p class="recipe-name">Gluten-Free Lava Cakes</p>
                             </a>
                         </div>
                     </div>
@@ -126,7 +126,7 @@
                         <div class="breads-border">
                             <a href="BnoKneadOneRec.html" target="_blank">
                                 <img class="testingImage" src="./ImagesFinal/NKneadBreadSTh.png" alt="No Knead Bread Image and Recipe Link" loading="lazy">
-                                <p class="recipe-name">12</p>
+                                <p class="recipe-name">Classic Birthday Cake</p>
                             </a>
                         </div>
                     </div>
