--- a/toppings.html
+++ b/toppings.html
@@ -48,7 +48,7 @@
                         <div class="breads-border">
                             <a href="BnoKneadOneRec.html" target="_blank">
                                 <img class="testingImage" src="./ImagesFinal/NKneadBreadSTh.png" alt="No Knead Bread Image and Recipe Link" loading="lazy">
-                                <p class="recipe-name">Parmesan Garlic Breadsticks</p>
+                                <p class="recipe-name">German Cake Frosting</p>
                             </a>
                         </div>
                     </div>
@@ -66,7 +66,7 @@
                         <div class="breads-border">
                             <a href="BnoKneadOneRec.html" target="_blank">
                                 <img class="testingImage" src="./ImagesFinal/pdMTw.png" alt="No Knead Bread Image and Recipe Link">
-                                <p class="recipe-name">Rolls</p>
+                                <p class="recipe-name">Lemon Curd</p>
                             </a>
                         </div>
                     </div>
@@ -74,7 +74,7 @@
                         <div class="breads-border">
                             <a href="BnoKneadOneRec.html" target="_blank">
                                 <img class="testingImage" src="./ImagesFinal/NKneadBreadSTh.png" alt="No Knead Bread Image and Recipe Link" loading="lazy">
-                                <p class="recipe-name">6</p>
+                                <p class="recipe-name">Pastry Cream</p>
                             </a>
                         </div>
                     </div>
@@ -92,7 +92,7 @@
                         <div class="breads-border">
                             <a href="BnoKneadOneRec.html" target="_blank">
                                 <img class="testingImage" src="./ImagesFinal/SourdoughBreadSTh.png" alt="No Knead Bread Image and Recipe Link">
-                                <p class="recipe-name">8</p>
+                                <p class="recipe-name">Sprinkles</p>
                             </a>
                         </div>
                     </div>
@@ -100,7 +100,7 @@
                         <div class="breads-border">
                             <a href="BnoKneadOneRec.html" target="_blank">
                                 <img class="testingImage" src="./ImagesFinal/pdMOn.png" alt="No Knead Bread Image and Recipe Link" loading="lazy">
-                                <p class="recipe-name">Cinnamon Sugar Recipe</p>
+                                <p class="recipe-name">Confectioners' Sugar</p>
                             </a>
                         </div>
                     </div>
@@ -110,7 +110,7 @@
                         <div class="breads-border">
                             <a href="BnoKneadOneRec.html" target="_blank">
                                 <img class="testingImage" src="./ImagesFinal/NKneadBreadSFi.png" alt="No Knead Bread Image and Recipe Link">
-                                <p class="recipe-name">10</p>
+                                <p class="recipe-name">Chocolate Ganache</p>
                             </a>
                         </div>
                     </div>
@@ -118,7 +118,7 @@
                         <div class="breads-border">
                             <a href="BnoKneadOneRec.html" target="_blank">
                                 <img class="testingImage" src="./ImagesFinal/mpJam.png" alt="No Knead Bread Image and Recipe Link">
-                                <p class="recipe-name">11</p>
+                                <p class="recipe-name">Ice Cream</p>
                             </a>
                         </div>
                     </div>
@@ -126,7 +126,7 @@
                         <div class="breads-border">
                             <a href="BnoKneadOneRec.html" target="_blank">
                                 <img class="testingImage" src="./ImagesFinal/NKneadBreadSTh.png" alt="No Knead Bread Image and Recipe Link" loading="lazy">
-                                <p class="recipe-name">12</p>
+                                <p class="recipe-name">Yogurt</p>
                             </a>
                         </div>
                     </div>
